[project]
name = "chronoblock"
version = "1.0.0"
description = "Fast block-number → timestamp API for EVM chains"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.25",
  "pytest-cov>=4.0",
  "httpx",
  "respx>=0.22",
  "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chronoblock"]

[tool.ruff]
target-version = "py312"
line-length = 120
